SET(APP "test")
SET(APPID "nemo${APP}")
SET(APPNAME "${APPID}")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")

ADD_EXECUTABLE(${APPNAME}
    ${APP}.c
	)
ADD_DEPENDENCIES(${APPNAME} xemoutil nemowidget nemoui)
TARGET_LINK_LIBRARIES(${APPNAME} xemoutil nemowidget nemoui
    ${NEMOAPPS_COMMON_LIBRARIES}
    )
INSTALL(TARGETS ${APPNAME}
    DESTINATION ${BIN_DIR}
    )

SET(CONFXML "${APP}.conf")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
