SET(CONFXML "udevd.conf")
SET(APPNAME "nemoudevd")

ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")

ADD_EXECUTABLE(${APPNAME}
    udevd.c
	)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
#SET(SVCFILE "nemoudevd.service")
#INSTALL(FILES ${CMAKE_CURRENT_SOURCE_DIR}/${SVCFILE}
#    DESTINATION /lib/systemd/system/)
