SET(SUBPROJECT "nemouniverse")
SET(CONFXML "universe.conf")
SET(UNIVERSE_ICON_DIR "${ICON_DIR}/universe")
SET(UNIVERSE_IMG_DIR "${IMG_DIR}/universe")
ADD_DEFINITIONS(-DSUBPROJECT="${SUBPROJECT}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DUNIVERSE_ICON_DIR="${UNIVERSE_ICON_DIR}")
ADD_DEFINITIONS(-DUNIVERSE_IMG_DIR="${UNIVERSE_IMG_DIR}")

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${UNIVERSE_IMG_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${UNIVERSE_ICON_DIR}
    )

ADD_SUBDIRECTORY(planet)
ADD_SUBDIRECTORY(background)
