SET(SUBPROJECT "nemouniverse")
SET(UNIVERSE_ICON_DIR "${ICON_DIR}/universe")
SET(UNIVERSE_IMG_DIR "${IMG_DIR}/universe")
ADD_DEFINITIONS(-DSUBPROJECT="${SUBPROJECT}")
ADD_DEFINITIONS(-DUNIVERSE_ICON_DIR="${UNIVERSE_ICON_DIR}")
ADD_DEFINITIONS(-DUNIVERSE_IMG_DIR="${UNIVERSE_IMG_DIR}")

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${UNIVERSE_IMG_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${UNIVERSE_ICON_DIR}
    )

ADD_SUBDIRECTORY(planet)
ADD_SUBDIRECTORY(menu)
ADD_SUBDIRECTORY(background)
