SET(SUBPROJECT "nemouniverse")
SET(UNIVERSE_RES_DIR "${DATA_DIR}/universe/res")
SET(BACKGROUND_RES_DIR "${UNIVERSE_RES_DIR}/background")
SET(MENU_RES_DIR "${UNIVERSE_RES_DIR}/menu")
SET(PLANET_RES_DIR "${UNIVERSE_RES_DIR}/planet")
ADD_DEFINITIONS(-DSUBPROJECT="${SUBPROJECT}")
ADD_DEFINITIONS(-DBACKGROUND_RES_DIR="${BACKGROUND_RES_DIR}")
ADD_DEFINITIONS(-DMENU_RES_DIR="${MENU_RES_DIR}")
ADD_DEFINITIONS(-DPLANET_RES_DIR="${PLANET_RES_DIR}")

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/res/
    DESTINATION  ${UNIVERSE_RES_DIR}
    )

ADD_SUBDIRECTORY(planet)
ADD_SUBDIRECTORY(menu)
ADD_SUBDIRECTORY(background)
