SET(LIBNAME "nemoview")
ADD_DEFINITIONS(-DLIBNAME="${LIBNAME}")

PKG_CHECK_MODULES(NEMOPLAY REQUIRED nemoplay)
INCLUDE_DIRECTORIES(${NEMOPLAY_INCLUDE_DIRS})
LINK_DIRECTORIES(${NEMOPLAY_LIBRARY_DIRS})

ADD_LIBRARY(${LIBNAME} SHARED
    player.c
    player.h
    view.h
    misc.h
    graph.h
    )
TARGET_LINK_LIBRARIES(${LIBNAME}
    ${NEMOPLAY_LIBRARIES}
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

CONFIGURE_FILE(${LIBNAME}.pc.in ${LIBNAME}.pc @ONLY)
INSTALL(TARGETS ${LIBNAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    )
INSTALL(FILES
    player.h
    view.h
    misc.h
    graph.h
    DESTINATION ${CMAKE_INSTALL_INCDIR}/${LIBNAME}
    )
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${LIBNAME}.pc
    DESTINATION ${CMAKE_INSTALL_PKGDIR}
    )
