SET(SUBPROJECT "nemowall")
SET(CONFXML "wall.conf")
SET(WALL_ICON_DIR "${ICON_DIR}/wall")
SET(WALL_IMG_DIR "${IMG_DIR}/wall")
ADD_DEFINITIONS(-DSUBPROJECT="${SUBPROJECT}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")
ADD_DEFINITIONS(-DWALL_ICON_DIR="${WALL_ICON_DIR}")
ADD_DEFINITIONS(-DWALL_IMG_DIR="${WALL_IMG_DIR}")

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )

INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/images/
    DESTINATION  ${WALL_IMG_DIR}
    )
INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/icons/
    DESTINATION  ${WALL_ICON_DIR}
    )

ADD_SUBDIRECTORY(menu)
ADD_SUBDIRECTORY(background)
