SET(CONFXML "weather.conf")
SET(APPNAME "nemoweather")
ADD_DEFINITIONS(-DAPPNAME="${APPNAME}")
ADD_DEFINITIONS(-DCONFXML="${CONFXML}")

ADD_EXECUTABLE(${APPNAME}
    weather.c
	)
ADD_DEPENDENCIES(${APPNAME} nemoutil nemowidget)

TARGET_LINK_LIBRARIES(${APPNAME}
    nemoutil
    nemowidget
    ${NEMOAPPS_COMMON_LIBRARIES}
	)

INSTALL(TARGETS ${APPNAME}
    DESTINATION bin
    )

CONFIGURE_FILE(${CONFXML}.in ${CONFXML} @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/${CONFXML}
    DESTINATION ${ETC_DIR}
    )
